AgentStartup java HttpClient